Blog Post Image cropping fix on smaller viewport

--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -47,6 +47,9 @@
 
     .post-article--has-image .post-content {
         margin-top: -26px;
+        @media only screen and (max-width : 1500px) {
+            margin-top: 0;
+        }
     }
 }
 
